--- a/student-store-api/package.json
+++ b/student-store-api/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "seed":   "npx prisma db seed",
-    "dev": "node ./src/server.js"
+    "seed": "npx prisma db seed",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
